--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
 html,
 body {
     height: 100vh;
+    padding: 0;
+    margin: 0;
 }
 
-/* 隱藏scoll-bar */
+a {
+    text-decoration: none;
+    color: black;
+}
+
+/* lock screen */
+
+html.fixWindow {
+    overflow: hidden;
+}
+
+/* 隱藏scoll-bar > */
 html {
     overflow: -moz-hidden-unscrollable;
     height: 100%;
@@ -19,7 +32,28 @@ body {
 	width: calc(100vw + 18px);
 	overflow: auto;
 }
-/* --- */
+/* < 隱藏scoll-bar */
+
+.tail {
+    pointer-events:none;
+    width: 30px;
+    height: 30px;
+    border: 2px solid #333;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    transition: .07s;
+}
+
+.background {
+    /* background: #f6f; */
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+}
+
 
 .main {
     position: absolute;
@@ -30,13 +64,16 @@ body {
     left: 25vw;
 }
 
+/* navbar zoom > */
+
 .navBar {
     position: fixed;
     width: 25vw;
     top: 0;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
     transition: 1s;
     z-index: 1000;
 }
@@ -53,6 +90,42 @@ body {
     display: none;
 }
 
+.navBarItem {
+    margin-left: 20px;
+    margin-top: 20px;
+    border-bottom: 0px solid #fff;
+    position: relative;
+    cursor: pointer;
+    font-weight: 300;
+    letter-spacing: 0.1rem;
+}
+
+.navBarItem::before {
+    content: "";
+    width: 0%;
+    height: 0px;
+    border-bottom: 1px solid #fff;
+    position: absolute;
+    bottom: 2px;
+    transition: .5s;
+}
+
+.navBarItem:hover::before {
+    width: 100%;
+}
+
+@media (max-width: 992px) { 
+    .navBarItem {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 992px) {
+    .navBarItem {
+        font-size: 0.8rem;
+    }
+}
+
 .menuIcon {
     position: fixed;
     top: 50%;
@@ -61,6 +134,7 @@ body {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    z-index: 9999;
 }
 
 .menuIcon-sm {
@@ -71,18 +145,10 @@ body {
     cursor: pointer;
 }
 
-.tail {
-    pointer-events:none;
-    width: 30px;
-    height: 30px;
-    border: 2px solid #333;
-    border-radius: 50%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    transition: .07s;
-}
+/* < navbar zoom */
+
+
+
 
 
 /* RWD */
@@ -94,34 +160,112 @@ body {
 
 /* Large devices (desktops, 992px and up) */
 @media (max-width: 992px) { 
-    /* .closeIcon {
-        display: block;
-    }
-    .mainIcon {
-        display: none;
-    }
-    .navBar {
-        width: 100vw;
-    }
-     */
+
 }
 
 @media (min-width: 992px) {
-    /* .closeIcon {
-        display: none;
-    }
-    .mainIcon {
-        display: block;
-    }
-    .navBar {
-        width: 25vw;
-    } */
+
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
 /* @media (min-width: 1200px) { ... } */
 
-.item {
-    font-size: 7rem;
+.workBlock {
+    width: 100vw;
+    height: 200px;
+    position: relative;
+    top: 0;
+    /* background-color: #fff; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: height 1s;
 }
+
+.workBlockOpen {
+    height: 100vh;
+}
+
+.zoom {
+    width: 100vw;
+    height: 0;
+    position: absolute;
+    top: 10vh;
+    display: flex;
+    justify-content: center;
+    transition: height 1s;
+}
+
+.zoomOpen {
+    height: 80vh;
+}
+
+.content {
+    height: 0vh;
+    background: #fff;
+    position: absolute;
+    /* z-index: 2; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: height 1s;
+}
+
+.contentOpen {
+    height: 80vh;
+}
+
+.indexTop {
+    position: absolute;
+    top: -100px;
+    font-size: 7rem;
+    height: 200px;
+    opacity: 1;
+    z-index: 1000;
+    clip-path: inset(0 0 49.75% 0);
+    transition: clip-path 1s;
+}
+
+.indexTopHide {
+    clip-path: inset(0 0 100% 0);
+}
+
+.indexBotton {
+    position: absolute;
+    bottom: -100px;
+    font-size: 7rem;
+    height: 200px;
+    opacity: 1;
+    z-index: 1000;
+    clip-path: inset(50.25% 0 0 0);
+    transition: clip-path 1s;
+}
+
+.indexBottonHide {
+    clip-path: inset(100% 0 0 0);
+}
+
+/* .item::before {
+    content: 'webwebwebwebwebwebwebwebwebwebwebwebwebweb';
+    font-size: 7rem;
+    position: absolute;
+    left: -300%;
+    opacity: 0;
+    transition: 0.5s;
+    animation: marqee 10s infinite linear;
+}
+
+.item:hover::before {
+    opacity: 1;
+}
+
+@keyframes marqee {
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(-100vw);
+    }
+} */
 
