--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     height: 100vh;
     padding: 0;
     margin: 0;
+    list-style: none;
 }
 
 a {
@@ -186,6 +187,90 @@ body {
     height: 100vh;
 }
 
+/* 標題 */
+
+.indexTop,
+.indexBotton {
+    position: absolute;
+    font-size: 5rem;
+    height: 10vh;
+    width: 100vw;
+    opacity: 1;
+    z-index: 1000;
+    color: #000;
+    line-height: 20vh;
+    transition: 1s;
+    overflow: hidden;
+    text-align: center;
+}
+
+.indexTop {
+    top: -10vh;
+}
+
+.indexBotton {
+    bottom: -10vh;
+    line-height: 0;
+}
+
+.marquee {
+    font-size: 2rem;
+    position: absolute;
+    width: 200vw;
+    height: 10vh;
+    line-height: 10vh;
+    top: 0;
+    opacity: 0;
+    /* background: rgba(255, 0, 0, 0.486); */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    transition: 1s;
+
+}
+
+.marqueeTop {
+    animation: marqueeTopRun 10s infinite linear;
+}
+
+.marqueeBottom {
+    animation: marqueeBottomRun 10s infinite linear;
+}
+
+.marqueeItem {
+    /* background: #0f0; */
+}
+
+.marqueeShow {
+    transition-delay: 1s;
+    opacity: 1;
+}
+
+@keyframes marqueeTopRun {
+    from{ left: 0; }
+    to{ left: -100vw;}
+}
+
+@keyframes marqueeBottomRun {
+    from{ left: -100vw; }
+    to{ left: 0vw;}
+}
+
+/* 隱藏標題 */
+
+.workIndexTitle {
+    opacity: 1;
+    transition: 1s;
+    transition-delay: 0.5s;
+}
+
+.workIndexTitleHide {
+    opacity: 0;
+    transition-delay: 0s;
+}
+
+/* 內容區 */
+
 .zoom {
     width: 100vw;
     height: 0;
@@ -206,7 +291,8 @@ body {
     position: absolute;
     /* z-index: 2; */
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
     overflow: hidden;
     transition: height 1s;
@@ -216,56 +302,28 @@ body {
     height: 80vh;
 }
 
-.indexTop {
-    position: absolute;
-    top: -100px;
-    font-size: 7rem;
-    height: 200px;
-    opacity: 1;
-    z-index: 1000;
-    clip-path: inset(0 0 49.75% 0);
-    transition: clip-path 1s;
+/* 線條動畫 */
+
+.line {
+    width: 100%;
+    height: 1px;
+    background: #000;
+    transform: scaleX(0);
+    /* transition: 1.5s; */
+    transition-delay: 1s;
 }
 
-.indexTopHide {
-    clip-path: inset(0 0 100% 0);
+.lineTop {
+    transform-origin: left;
 }
 
-.indexBotton {
-    position: absolute;
-    bottom: -100px;
-    font-size: 7rem;
-    height: 200px;
-    opacity: 1;
-    z-index: 1000;
-    clip-path: inset(50.25% 0 0 0);
-    transition: clip-path 1s;
+.lineBottom {
+    transform-origin: right;
 }
 
-.indexBottonHide {
-    clip-path: inset(100% 0 0 0);
+.lineOpen {
+    transform: scaleX(1);
+    transition: 1.5s;
+    transition-delay: 1s;
+
 }
-
-/* .item::before {
-    content: 'webwebwebwebwebwebwebwebwebwebwebwebwebweb';
-    font-size: 7rem;
-    position: absolute;
-    left: -300%;
-    opacity: 0;
-    transition: 0.5s;
-    animation: marqee 10s infinite linear;
-}
-
-.item:hover::before {
-    opacity: 1;
-}
-
-@keyframes marqee {
-    0%{
-        transform: translateX(0);
-    }
-    100%{
-        transform: translateX(-100vw);
-    }
-} */
-
