--- a/css/intro.css
+++ b/css/intro.css
@@ -2,16 +2,12 @@
     /* height: 325vh; */
 }
 
-.index-1 {
-    position: absolute;
-    /* background: #000; */
-    top: 0;
-    right: 2rem;
-    /* transform: translateX(-100%); */
-    /* transform-origin: left bottom; */
-    font-size: 15rem;
-    line-height: 15rem;
-    font-weight: 500;
+.index {
+    font-family: 'Montserrat', sans-serif;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 12rem;
+    line-height: 12rem;
     color: #fff;
     text-shadow: 1px 0px 0px #000,
     0px -1px 0px #000,
@@ -19,18 +15,31 @@
     -1px 0px 0px #000;
     opacity: .3;
     height: 0;
-    /* overflow: hidden; */
     writing-mode: vertical-lr;
+    z-index: 0;
 }
 
+.sd-intro {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+
+
 .intro .title {
-    font-size: 5rem;
-    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 4rem;
+    font-weight: 900;
     position: relative;
     /* left: 2.5rem; */
     /* margin-bottom: 1.5rem; */
     /* margin-top: 5rem; */
     line-height: 5rem;
+}
+
+.intro .title .txt {
+    margin-left: -2px;
 }
 
 .intro .title small{
@@ -59,7 +68,7 @@
     margin-bottom: 5rem;
 }
 
-.intro .row:last-of-type {
+.intro .row.project {
     margin-bottom: 0;
 }
 
@@ -69,6 +78,7 @@
 }
 
 .intro .row .txt {
+    font-size: .9rem;
     margin-top: 1rem;
 }
 
@@ -124,21 +134,23 @@
 
 .intro .project .wrap {
     width: 75%;
+    margin-top: 3rem;
+}
+
+.intro .project .col-lg-6:nth-of-type(odd) {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
 }
 
 .intro .project .col-lg-6:nth-of-type(odd) .txt {
     font-weight: 100;
     font-size: 2rem;
-    margin-right: 2rem;
+    margin-right: 40px;
+    display: inline-block;
 }
 
-.intro .project .col-lg-6:nth-of-type(even) .txt {
-    margin-top: 1.25rem;
-}
 
-.intro .project .col-lg-6:nth-of-type(even) .txt span {
-    font-size: 0.5rem;
-}
 
 @media (max-width: 992px) { 
     .intro .project .wrap {
@@ -171,45 +183,105 @@
     .intro .project .col-lg-6:nth-of-type(even) .txt li {
         list-style: none;
 
-        margin-bottom: 1.25rem;
+        margin-bottom: 1.5rem;
     }
 
 }
 
 .intro .project .col-lg-6:nth-of-type(even) .txt li {
-    display: inline-block;
-    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
-.intro .project .preview {
+.intro .project .col-lg-6:nth-of-type(even) .txt li .item {
+    pointer-events: none;
+    padding: 0 5px 0 10px;
+    height: 40px;
+    line-height: 40px;
+}
+
+.intro .project .col-lg-6:nth-of-type(even) .txt {
+    margin-top: 1.5rem;
+}
+
+.intro .project .col-lg-6:nth-of-type(even) .txt span {
+    pointer-events: none;
+    background: #555;
+}
+
+
+
+.intro .preview {
     pointer-events:none;
     position: absolute;
-    bottom: calc(50% - 100px);
-    left: -340px;
+    top: 0;
+    left: 10vw;
     z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(-50%);
+    transition: top .3s;
 }
 
-.intro .project .preview .box {
-    width: 306px;
-    height: 206px;
-    border: 3px solid #000;
-    border-radius: 5px;
-    box-shadow: 0px 5px 5px 1px rgb(0,0,0,0.3);
+.intro .preview .box {
+    width: 302px;
+    height: 202px;
+    border: 1px solid #000;
+    backdrop-filter: blur(5px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.intro .project .preview .box img {
+.intro .preview .box .txt {
+    font-size: 1.5rem;
+    font-weight: 100;
+    letter-spacing: 2px;
+    transform: scaleY(0.9);
+}
+
+.intro .preview .box img {
     object-fit: cover;
     width: 300px;
     height: 200px;
-    border-radius: 3px;
 }
 
-.intro .project .preview .arrow {
+.intro .preview .arrow {
+    width: calc(40vw - 302px);
+    border-bottom: 1px solid #000;
+}
+
+.intro .txtEfct {
     position: absolute;
-    right: -30px;
-    bottom: calc(50% - 15px);
-    width: 0;
-    height: 30px;
-    border: 15px solid transparent;
-    border-left: 15px solid #000;
+    width: 300px;
+    height: 40px;
+    top: 0;
+    left: 0;
+    border: 1px solid #000;
+    /* background: #000; */
+    backdrop-filter: invert(1);
+    transition: top .3s, width .3s;
+}
+
+
+.intro .cateEfct {
+    position: absolute;
+    display: flex;
+    justify-content: flex-start;
+    width: 300px;
+    height: 40px;
+    top: 0;
+    left: 0;
+    /* background: #000; */
+    backdrop-filter: invert(1);
+    transition: top .3s , width .3s;
+}
+
+.intro .cateEfct .white {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    transition: top .3s , width .3s;
 }
