--- a/css/works.css
+++ b/css/works.css
@@ -6,18 +6,7 @@
 .workList .index {
     position: absolute;
     top: 0;
-    right: 2rem;
-    font-size: 15rem;
-    line-height: 15rem;
-    font-weight: 500;
-    color: #fff;
-    text-shadow: 1px 0px 0px #000,
-    0px -1px 0px #000,
-    0px 1px 0px #000,
-    -1px 0px 0px #000;
-    opacity: .3;
-    writing-mode: vertical-lr;
-
+    right: 0;
 }
 
 .workList .workBlock {
@@ -117,6 +106,8 @@
     font-size: 0.5rem;
     transform: translateX(100%);
 }
+
+
 
 .hud {
     opacity: 1;
@@ -450,6 +441,23 @@
     z-index: 1000;
 }
 
+#imgs[data-index="Concert"] img,
+#imgs[data-index="3DModlerender"] img,
+#imgs[data-index="KeyVisual"] img,
+#imgs[data-index="EDMparty"] img{
+    margin: 1rem;
+    max-height: 90vh;
+    max-width: 100%;
+    object-fit: contain;
+    /* filter: drop-shadow(0px 4px 7px rgb(0,0,0,0.4)); */
+}
+
+#imgs[data-index="WebLayout"] img{
+    margin: 1rem;
+    width: 100%;
+    /* filter: drop-shadow(0px 4px 7px rgb(0,0,0,0.4)); */
+}
+
 
 .modal .idNum {
     position: fixed;
@@ -464,26 +472,6 @@
     #fff 50%);
     /* border: 1px solid #000; */
     z-index: 1000;
-}
-
-.modal img[data-index="Concert"],
-.modal img[data-index="3DModlerender"],
-.modal img[data-index="KeyVisual"],
-.modal img[data-index="EDMparty"]{
-    margin: 1rem;
-    max-height: 90vh;
-    max-width: 100%;
-    object-fit: contain;
-    /* filter: drop-shadow(0px 4px 7px rgb(0,0,0,0.4)); */
-}
-
-
-
-
-.modal img[data-index="WebLayout"] {
-    margin: 1rem;
-    width: 100%;
-    /* filter: drop-shadow(0px 4px 7px rgb(0,0,0,0.4)); */
 }
 
 .modal .idNum div {
@@ -508,3 +496,53 @@
     ;right: 0;
 }
 
+.indexItem {
+    padding-bottom: 100px;
+}
+
+.indexItem .title {
+    display: inline-block;
+    position: relative;
+    font-size: 3rem;
+    font-weight: 900;
+    line-height: 3rem; 
+}
+.indexItem .title span {
+    font-size: 0.5rem;
+    font-weight: 500;
+    position: absolute;
+}
+
+.indexItem .subTitle {
+    display: inline-block;
+    font-size: 0.9rem; 
+    font-weight: 500;
+    letter-spacing: 1px; 
+}
+
+.indexItem .subTitle .chiTitle {
+    display: inline-block;
+    /* padding: 2px 0.5rem; */
+    padding: 4px 6px;
+    margin-bottom: 3px;
+    background-color: #333;
+    color: #fff;
+}
+
+.indexItem .worksBlock {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0.5rem;
+    margin: 1rem 0;
+    border: 1px solid #ccc;
+}
+
+.indexItem .worksBlock .work img{
+    margin: 0.5rem;
+    width: 102px;
+    height: 102px;
+    object-fit:cover;
+    border: 1px solid #333;
+}
