--- a/css/works.css
+++ b/css/works.css
@@ -441,6 +441,10 @@
     z-index: 1000;
 }
 
+#imgs img{
+    background-color: transparent;
+}
+
 #imgs[data-index="Concert"] img,
 #imgs[data-index="3DModlerender"] img,
 #imgs[data-index="KeyVisual"] img,
@@ -449,13 +453,14 @@
     max-height: 90vh;
     max-width: 100%;
     object-fit: contain;
-    /* filter: drop-shadow(0px 4px 7px rgb(0,0,0,0.4)); */
+    /* box-shadow: 0px 4px 7px rgb(0,0,0,0.4); */
+    filter: drop-shadow(0px 7px 5px rgb(0,0,0,0.6));
 }
 
 #imgs[data-index="WebLayout"] img{
     margin: 1rem;
     width: 100%;
-    /* filter: drop-shadow(0px 4px 7px rgb(0,0,0,0.4)); */
+    filter: drop-shadow(0px 4px 3px rgb(0,0,0,0.4));
 }
 
 
@@ -466,10 +471,10 @@
     width: 75px;
     height: 75px;
     background-image: linear-gradient(-45deg,
-    #fff 49%,
+    transparent 49%,
     #333 49%,
     #333 50%,
-    #fff 50%);
+    transparent 50%);
     /* border: 1px solid #000; */
     z-index: 1000;
 }
@@ -500,6 +505,12 @@
     padding-bottom: 100px;
 }
 
+.indexItem .title-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
 .indexItem .title {
     display: inline-block;
     position: relative;
@@ -511,6 +522,21 @@
     font-size: 0.5rem;
     font-weight: 500;
     position: absolute;
+}
+
+.indexItem .sub {
+    display: flex;
+    font-weight: 500;
+}
+
+.indexItem .sub .work-title {
+
+}
+
+.indexItem .sub .work-year {
+    margin:0 1rem;
+    border-left: 2px solid #333;
+    padding-left: 1rem;
 }
 
 .indexItem .subTitle {
@@ -540,6 +566,7 @@
 }
 
 .indexItem .worksBlock .work img{
+    pointer-events: none;
     margin: 0.5rem;
     width: 102px;
     height: 102px;
