--- a/css/works.css
+++ b/css/works.css
@@ -1,6 +1,7 @@
 .workList {
     position: relative;
     border-top: 1px dotted rgba(0, 0, 0, 0.3);
+    z-index: 0;
 }
 
 .workList .index {
@@ -501,6 +502,8 @@
 
 .indexItem {
     padding-bottom: 100px;
+    position: relative;
+    z-index: 2;
 }
 
 .indexItem .title-flex {
@@ -522,13 +525,16 @@
     position: absolute;
 }
 
+
+@media (max-width: 992px) {
+    .indexItem .title {
+        font-size: 1.5rem;
+    }
+}
+
 .indexItem .sub {
     display: flex;
     font-weight: 500;
-}
-
-.indexItem .sub .work-title {
-
 }
 
 .indexItem .sub .work-year {
@@ -571,3 +577,32 @@
     object-fit:cover;
     border: 1px solid #333;
 }
+
+@media (max-width: 992px) {
+    .indexItem .subTitle {
+        font-size: 0.5rem; 
+        letter-spacing: 1px; 
+    }
+
+    .indexItem .worksBlock {
+        padding: 0;
+        margin: 0 0 0.5rem 0;
+        background-color: #fff;
+    }
+
+    .indexItem .worksBlock a {
+        margin: 0;
+        width: 50%;
+    }
+
+    .indexItem .worksBlock .work img{
+        width: 100%;
+        height: 100%;
+        border:none;
+        border-bottom: 1px solid #ccc;
+        border-right: 1px solid #ccc;
+        margin: 0;
+        padding: 2px;
+    }
+}
+
