--- a/css/contacts.css
+++ b/css/contacts.css
@@ -2,6 +2,7 @@
     position: relative;
 }
 
+
 .contacts .index {
     position: absolute;
     top: 0;
@@ -15,11 +16,12 @@
     flex-direction: column;
 }
 
+
 .contacts .container .title {
     color: #fff;
     background-color: #555;
     padding: 0 1rem;
-    font-weight: 500;
+    font-weight: 100;
     font-size: 1rem;
     letter-spacing: 2px;
 }
@@ -65,4 +67,33 @@
 .contacts .container .right {
     font-size: 0.8rem;
     margin-top: 5rem;
+}
+
+@media (max-width: 992px) {
+    
+    .contacts .container .chi {
+        padding-top: 1rem;
+        writing-mode: horizontal-tb;
+    }
+
+    .contacts .container .eng {
+        padding-bottom: 1rem;
+        font-size: 0.5rem;
+    }
+
+    .contacts .container img {
+        width: 80vw;
+        height: 170px;
+        object-fit: cover;
+    }
+
+    .contacts .container .email,
+    .contacts .container .phone {
+        margin-bottom: 0.5rem;
+        font-size: 1rem;
+    }
+
+    .contacts .container .right {
+        margin-top: 2rem;
+    }
 }
