--- a/css/intro.css
+++ b/css/intro.css
@@ -20,6 +20,12 @@
     z-index: 0;
 }
 
+@media (max-width: 992px) {
+    .index {
+        font-size: 6rem;
+    }
+}
+
 .sd-intro {
     position: absolute;
     top: 0;
@@ -115,7 +121,7 @@
 
     .intro .row .card-txt {
         color: #fff;
-        font-size: .5rem;
+        font-size: 1rem;
         width: 100%;
         height: 100px;
         top: 0;
@@ -126,7 +132,9 @@
     }
 
     .intro .row .txt {
-        font-size: .5rem;
+        font-size: 0.8rem;
+        letter-spacing: 2px;
+        line-height: 1.6rem;
         margin-top: 0.75rem;
         padding: 15px;
     }
@@ -298,8 +306,9 @@
         list-style: none;
         margin-bottom: 0rem;
         font-size: 0.5rem;
-        height: 30px;
-        line-height: 30px;
+        letter-spacing: 0px;
+        height: 40px;
+        line-height: 40px;
     }
 
 }
