--- a/css/works.css
+++ b/css/works.css
@@ -500,6 +500,11 @@
     ;right: 0;
 }
 
+@media (max-width: 992px) {
+}
+
+
+
 .indexItem {
     padding-bottom: 100px;
     position: relative;
@@ -513,6 +518,7 @@
 }
 
 .indexItem .title {
+    font-family: 'Montserrat', sans-serif;
     display: inline-block;
     position: relative;
     font-size: 3rem;
@@ -520,6 +526,7 @@
     line-height: 3rem; 
 }
 .indexItem .title span {
+    font-family: 'Noto Sans TC', sans-serif;
     font-size: 0.5rem;
     font-weight: 500;
     position: absolute;
@@ -528,7 +535,7 @@
 
 @media (max-width: 992px) {
     .indexItem .title {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
 }
 
@@ -580,8 +587,14 @@
 
 @media (max-width: 992px) {
     .indexItem .subTitle {
-        font-size: 0.5rem; 
-        letter-spacing: 1px; 
+        margin-top: 0.2rem;
+        font-size: 0.8rem; 
+        letter-spacing: 2px; 
+        line-height: 1.6rem;
+    }
+
+    .indexItem .subTitle .txt {
+        margin-top: 0.2rem;
     }
 
     .indexItem .worksBlock {
