--- a/css/intro.css
+++ b/css/intro.css
@@ -7,7 +7,7 @@
     font-family: 'Montserrat', sans-serif;
     font-style: italic;
     font-weight: 300;
-    font-size: 12rem;
+    font-size: 9em;
     line-height: 12rem;
     color: #fff;
     text-shadow: 1px 0px 0px #000,
@@ -304,11 +304,11 @@
 
     .intro .project .col-lg-6:nth-of-type(even) .txt li {
         list-style: none;
-        margin-bottom: 0rem;
+        margin-bottom: -0.3rem;
         font-size: 0.5rem;
         letter-spacing: 0px;
-        height: 40px;
-        line-height: 40px;
+        height: 30px;
+        line-height: 30px;
     }
 
 }
@@ -373,7 +373,8 @@
 
 .intro .preview .arrow {
     width: calc(40vw - 302px);
-    border-bottom: 1px solid #000;
+    height: 1px;
+    background: #000;
 }
 
 .intro .txtEfct {
