--- a/css/top.css
+++ b/css/top.css
@@ -10,52 +10,104 @@
     z-index: 0;
 }
 
+.top .title {
+    margin-top: 2rem;
+}
+
+@media (max-width: 992px){
+    .top .title svg {
+        width: 70vh;
+        transform: rotate(90deg) translate(0%,-100%) ;
+        transform-origin: top left;
+    }
+}
+
+.top .list{
+    color: 333;
+    font-size: 1rem;
+    font-weight: 300;
+    letter-spacing: 2px;
+    display: flex;
+    justify-content: start;
+}
+
+.top .list .cate {
+    margin-right: 3rem;
+    margin-bottom: 1rem;
+    line-height: 1.2rem;
+    padding-left: 0.5rem;
+    border-left: 3px solid #000;
+}
+
+.top .list .cate span {
+    margin-left: 0.5rem;
+    font-size: 1rem;
+}
+
+@media (max-width: 992px) {
+    .top .list{
+        margin-top: 2rem;
+        font-size: 0.4rem;
+        flex-direction: column;
+        text-align: end;
+    }
+
+    .top .list .cate {
+        margin-right: 0;
+        border-left: 0;
+    }
+
+    .top .list .cate span {
+        font-size: 0.2rem;
+        display: block;
+    }
+}
+
 .page .scroll {
-    height: 0;
     position: absolute;
-    height: 100px;
-    left: 50%;
-    top: -150px;
-    animation: jump 1s infinite alternate ease-in;
-}
-
-@keyframes jump {
-    from{
-        top: -165px;
-    }
-    to{
-        top: -150px;
-    }
-}
-
-.page .scroll .heart {
-    position: absolute;
-    top: -30px;
-    left: -11px;
+    top: 0;
+    right: 0;
+    transform: rotate(-90deg) translate(100%,0%);
+    transform-origin: center center;
 }
 
 .page .scroll .txt {
-    color: #333;
-    position: absolute;
-    top: 0;
-    font-weight: 500;
+    color: #000;
+    font-weight: 300;
     letter-spacing: 3px;
-    writing-mode: vertical-lr;
+
 }
 
 .page .scroll .line {
-    position: absolute;
-    bottom: 0;
-    height: 100px;
-    border-right: 1px solid #333;
+    margin-top: 3px;
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: #000;
+    animation: line 2s infinite;
 }
 
-.page .scroll .tri {
-    position: absolute;
-    left: -9px;
-    bottom: 0;
-    width: 10px;
-    height: 10px;
-    background-image: linear-gradient(45deg,transparent 45%,#333 45%,#333 55%,transparent 55%);
+@keyframes line {
+    0%{
+        transform-origin: center right;
+        transform: scale(0);
+    }
+    33%{
+        transform-origin: center right;
+        transform: scale(1);
+    }
+    66%{
+        transform-origin: center left;
+        transform: scale(1);
+    }
+    100%{
+        transform-origin: center left;
+        transform: scale(0);
+    }
 }
 
+@media (max-width: 992px) {
+    .page .scroll .txt {
+        font-size: 0.5rem;
+    }
+}
