--- a/css/works.css
+++ b/css/works.css
@@ -433,6 +433,7 @@
     top: 50px;
     right: 50px;
     border: 1px solid #000;
+    background-color: #fff;
     width: 40px;
     height: 40px;
     border-radius: 200px;
@@ -501,6 +502,53 @@
 }
 
 @media (max-width: 992px) {
+
+    .modal .title-tag {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .modal .tags {
+        position: static;
+        padding: 1rem;
+        width: 50%;
+        border-left: 1px solid #000;
+        margin: 1rem;
+    }
+
+    .modal .workTitle {
+        font-size: 1.5rem;
+        font-weight: 300;
+        position: static;
+        padding: 1rem;
+        width: 50%;
+        text-align: end;
+    }
+
+    .modal .close {
+        /* position: static; */
+        top: 15px;
+        right: 50%;
+        transform: translateX(50%);
+    }
+
+    .modal .idNum {
+        display: none;
+        position: relative;
+    }
+
+    #imgs{
+        margin-top: 3rem;
+    }
+
+    #imgs[data-index="WebLayout"] img{
+        margin: 0;
+        margin-top: 1rem;
+        max-height: none;
+        width: 100%;
+        filter: drop-shadow(0px 10px 10px rgb(0,0,0,0.3));
+    }
 }
 
 
@@ -536,6 +584,15 @@
 @media (max-width: 992px) {
     .indexItem .title {
         font-size: 2rem;
+        position: relative;
+        line-height: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .indexItem .title .badge{
+        position: absolute;
+        left: 0;
+        top: -1.5rem;
     }
 }
 
