--- a/style.css
+++ b/style.css
@@ -81,6 +81,15 @@ body {
     border-top: 1px solid #000;
 }
 
+.blink {
+    height: 25vh;
+}
+
+@media (max-width: 992px) {
+    .blink {
+        height: 10vh;
+    }
+}
 
 
 /* navbar zoom > */
