--- a/css/top.css
+++ b/css/top.css
@@ -28,7 +28,7 @@
     font-weight: 300;
     letter-spacing: 2px;
     display: flex;
-    justify-content: start;
+    justify-content: center;
 }
 
 .top .list .cate {
