--- a/css/intro.css
+++ b/css/intro.css
@@ -33,7 +33,7 @@
 }
 
 
-
+.workList .title,
 .intro .title {
     font-family: 'Montserrat', sans-serif;
     font-size: 4rem;
@@ -42,10 +42,12 @@
     line-height: 5rem;
 }
 
+.workList .title .txt,
 .intro .title .txt {
     margin-left: -2px;
 }
 
+.workList .title small,
 .intro .title small{
     position: absolute;
     left: 0;
@@ -62,6 +64,7 @@
 
 }
 
+.workList .sub-title,
 .intro .sub-title{
     font-size: 1.2rem;
     font-weight: 500;
@@ -103,17 +106,20 @@
         margin-bottom: 3rem;
     }
 
+    .workList .title,
     .intro .title {
         font-size: 3rem;
         line-height: 2.5rem;
         margin-bottom: -0.5rem;
     }
 
+    .workList .title small,
     .intro .title small{
         top: -0.9rem;
         transform: translate(0% ,0%);
     }
 
+    .workList .title .sub-title,
     .intro .title .sub-title {
         font-size: 1rem;
         margin-top: -0.25rem;
@@ -309,11 +315,11 @@
     .intro .project .col-lg-6:nth-of-type(even) .txt li {
         list-style: none;
         margin-bottom: -0.3rem;
-        font-size: 8px;
+        font-size: 10px;
         letter-spacing: 1px;
         height: 30px;
         line-height: 30px;
-        font-weight: 100;
+        font-weight: 300;
     }
 
 }
