--- a/css/works.css
+++ b/css/works.css
@@ -10,6 +10,7 @@
     right: 0;
 }
 
+
 .workList .workBlock {
     /* width: 100%;  */
     height: 10vh;
@@ -569,9 +570,8 @@
     font-family: 'Montserrat', sans-serif;
     display: inline-block;
     position: relative;
-    font-size: 3rem;
-    font-weight: 900;
-    line-height: 3rem; 
+    font-size: 2rem;
+    line-height: 2rem; 
 }
 .indexItem .title span {
     font-family: 'Noto Sans TC', sans-serif;
@@ -583,7 +583,7 @@
 
 @media (max-width: 992px) {
     .indexItem .title {
-        font-size: 2rem;
+        font-size: 24px;
         position: relative;
         line-height: 2rem;
         margin-bottom: 1rem;
