--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,148 @@
+/* navbar zoom > */
+
+.navBar {
+    position: fixed;
+    width: 25vw;
+    top: 0;
+    left: -25vw;
+    transition: 1s;
+    z-index: 9998;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+
+
+.navBar img {
+    width: 50%;
+    position: absolute;
+    top: 40px;
+    left: 40px;
+}
+
+.navBar .list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+@media (max-width: 992px) {
+    .navBar {
+        width: 100%;
+    }
+
+    .navBar img {
+        width: 200px;
+        top: 20px;
+        left: 20px;
+    }
+}
+
+.navBarItem {
+    margin-left: 40px;
+    margin-top: 20px;
+    border-bottom: 0px solid #fff;
+    position: relative;
+    cursor: none;
+    font-weight: 300;
+    letter-spacing: 0.1rem;
+    font-size: 0.8rem;
+}
+
+.navBarItem::before {
+    content: "";
+    width: 0%;
+    height: 0px;
+    border-bottom: 1px solid #fff;
+    position: absolute;
+    bottom: 2px;
+    transition: .5s;
+}
+
+.navBarItem:hover::before {
+    width: 100%;
+}
+
+@media (max-width: 992px) { 
+    .navBarItem {
+        font-size: 15px;
+        margin-left: 20px;
+        margin-top: 20px;
+        border-bottom: 0px solid #fff;
+        font-weight: 100;
+        letter-spacing: 5px;
+    }
+}
+
+.navBar.show {
+    left: 0;
+}
+.navBar.hide {
+    left: -25vw;
+}
+
+@media (max-width: 992px) { 
+    .navBar.hide {
+        left: 0;
+        display: none;
+    }
+    .navBar {
+        left: 0;
+        width: 100%;
+    }
+}
+
+.menuIcon {
+    position: fixed;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.menuIcon.hide {
+    display: none;
+}
+
+.menuIcon-sm {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #555;
+    background-color: #fff;
+    border-radius: 100px;
+    z-index: 9999;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: .7;
+}
+
+@media (max-width: 992px) { 
+    .menuIcon {
+        display: none;
+    }
+}
+
+@media (min-width: 992px) {
+    .menuIcon-sm {
+        display: none;
+    }
+}
+
+.menuIcon-sm.hide {
+    display: none;
+}
+
 .navBar a {
     text-decoration: none;
     color: #fff;
