--- a/css/works.css
+++ b/css/works.css
@@ -10,384 +10,6 @@
     right: 0;
 }
 
-
-.workList .workBlock {
-    /* width: 100%;  */
-    height: 10vh;
-    position: relative;
-    top: 0;
-    transition: height 1s;
-}
-
-.workList .workBlockOpen {
-    height: 100vh;
-}
-
-.workList .workBlock .zoom {
-    color: #000;
-    width: 100%;
-    height: 0;
-    position: absolute;
-    top: 5vh;
-    display: flex;
-    justify-content: center;
-    transition: height 1s;
-}
-
-
-.workList .workBlock .zoomOpen {
-    height: 90vh;
-}
-
-/* 標題 */
-
-.workList .workBlock .zoom .indexTop,
-.workList .workBlock .zoom .indexBotton {
-    position: absolute;
-    /* background-color: #ff0; */
-    font-size: 3rem;
-    height: 5vh;
-    /* width: 100%; */
-    /* padding:0 5rem; */
-    padding-right: 4rem;
-    opacity: 1;
-    z-index: 1000;
-    color: #000;
-    line-height: 10vh;
-    transition: font-size 1s;
-    overflow: hidden;
-    text-align: center;
-    white-space:nowrap
-
-}
-
-.workList .workBlock .zoom .indexTop {
-    top: -5vh;
-}
-
-.workList .workBlock .zoom .indexTopClip {
-    overflow: hidden;
-}
-
-.workList .workBlock .zoom .indexBotton {
-    bottom: -5vh;
-    line-height: 0;
-}
-
-.workList .workBlock .zoom .font-lg {
-    font-size: 3.5rem;
-}
-
-/* 隱藏標題 */
-
-.workIndexTitle {
-    font-weight: 700;
-    display: inline-block;
-    position: relative;
-    opacity: 1;
-    transition: opacity 1s;
-    transition-delay: 0.5s;
-}
-
-
-.workIndexTitleHide {
-    width: 100vw;
-    opacity: 0;
-    transition-delay: 0s;
-}
-
-.workIndexTitle .badge {
-    font-family: 'Noto Sans TC', sans-serif;
-    font-weight: normal;
-    position: absolute;
-    padding: 3px 6px;
-    top: 15px;
-    right: -5px;
-    font-size: 0.5rem;
-    transform: translateX(100%);
-}
-
-
-
-.hud {
-    opacity: 1;
-    transition: opacity 1s;
-}
-
-.hud.hide {
-    opacity: 0;
-}
-
-.hud .left {
-    pointer-events:none;
-    /* display: none; */
-    /* background-color: #fff; */
-    width: 35vw;
-    height: 50vh;
-    position: fixed;
-    top: 10vh;
-    left: 5vw;
-    opacity: 0;
-    z-index: 10;
-}
-
-.hud .left img {
-    width: 35vw;
-    height: 50vh;
-    /* border: 2px solid #000; */
-    object-fit: contain;
-    filter: opacity(0.5);
-}
-
-.hud .right {
-    pointer-events:none;
-    /* display: none; */
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    /* background-color: #ff0; */
-    width: 20vw;
-    height: 50vh;
-    position: fixed;
-    bottom: 10vh;
-    right: 7.5vw;
-    opacity: 0;
-    z-index: 10;
-}
-
-.hud .right .title {
-    padding: 10px 20px;
-    font-size: 1.5rem;
-    font-weight: 700;
-    /* border: 1px solid #000; */
-    color: #fff;
-    text-shadow: 1px 0px 0px #000,
-    0px -1px 0px #000,
-    0px 1px 0px #000,
-    -1px 0px 0px #000;
-}
-
-.hud .right .subTitle {
-    font-size: 1rem;
-    font-weight: 500;
-    color: #000;
-    text-shadow: none
-}
-
-.hud .right .txt {
-    /* background-color: #fff; */
-    border-top: 1px solid #000;
-    padding: 10px 0;
-    margin: 0 20px;
-    font-size: 0.9rem;
-    font-weight: 300;
-    letter-spacing: 2px;
-    line-height: 1.7rem;
-    /* border: 1px solid #000; */
-}
-
-
-/* 跑馬燈 */
-
-.marquee {
-    background: #fff;
-    font-size: 2vw;
-    position: absolute;
-    width: 200vw;
-    height: 5vh;
-    line-height: 5vh;
-    top: 0;
-    opacity: 0;
-    /* background: rgba(255, 0, 0, 0.486); */
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    /* transition: 1s; */
-}
-
-.marqueeTop {
-    animation: marqueeTopRun 30s infinite linear;
-}
-
-.marqueeBottom {
-    animation: marqueeBottomRun 30s infinite linear;
-}
-
-.marqueeItem {
-    /* color: #000; */
-    /* background: #0f0; */
-    /* letter-spacing: 0.2rem; */
-    font-size: 3vh;    
-    font-weight: 100;
-    padding: 0 10px;
-    opacity: .5;
-}
-
-/* .marqueeShow {
-    transition-delay: 1s;
-    opacity: 1;
-} */
-
-@keyframes marqueeTopRun {
-    from{ left: 0; }
-    to{ left: -100vw;}
-}
-
-@keyframes marqueeBottomRun {
-    from{ left: -100vw; }
-    to{ left: 0vw;}
-}
-
-
-
-/* 內容區 */
-
-
-.workList .workBlock .zoom .content {
-    height: 0vh;
-    background: #fff;
-    position: absolute;
-    /* z-index: 2; */
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-    overflow: hidden;
-    transition: height 1s;
-}
-
-.workList .workBlock .zoom .contentOpen {
-    height: 90vh;
-}
-
-/* 線條動畫 */
-
-.workList .workBlock .zoom .content .line {
-    width: 100vw;
-    height: 1px;
-    background: rgba(0, 0, 0, 0.3);
-    transform: scaleX(0);
-    /* transition: 1.5s; */
-    transition-delay: 1s;
-}
-
-.workList .workBlock .zoom .content .lineTop {
-    transform-origin: left;
-}
-
-.workList .workBlock .zoom .content .lineBottom {
-    transform-origin: right;
-}
-
-.workList .workBlock .zoom .content .lineOpen {
-    transform: scaleX(1);
-    transition: 1.5s;
-    transition-delay: 1s;
-
-}
-
-/* slick */
-.slickBox {
-    display: flex;
-    width: 100vw;
-}
-
-.slickBox .pre,
-.slickBox .next {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    background-color: rgb(255, 255, 255,0.3);
-    border: 1px solid #000;
-    border-radius: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 999;
-}
-
-.slickBox .pre:hover,
-.slickBox .next:hover {
-    border: 1px solid #999;
-}
-
-.slickBox .pre {
-    top: 50%;
-    left: 5rem;
-}
-
-.slickBox .next {
-    top: 50%;
-    right: 5rem;
-}
-
-.pre,
-.next {
-    color: #000;
-}
-
-.pre:hover,
-.next:hover {
-    color: #aaa;
-}
-
-.slickUIIcon {
-    margin: 10px;
-}
-
-.slick-slide {
-    position: relative;
-}
-
-/* 作品 */
-.work {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.work .idNum {
-    padding: 0.2rem 0.5rem;
-    background: #000;
-    font-size: 0.8rem;
-    font-weight: 300;
-    color: #fff;
-    /* text-shadow: 1px 0px 0px #000,
-    0px -1px 0px #000,
-    0px 1px 0px #000,
-    -1px 0px 0px #000; */
-    letter-spacing: 2px;
-
-}
-
-.workImg {
-    margin: 20px 0;
-    width: 25vw;
-    max-width: 400px;
-    height: 400px;
-    z-index: 100;
-    object-fit: cover;
-    object-position: top center;
-    transition: .5s;
-    filter: grayscale(1);
-}
-
-.workImg:hover {
-    transform: translateY(-10px);
-    filter: grayscale(0);
-    box-shadow: 0px 10px 10px #999;
-}
-
-.work .title {
-    font-size: 1.15rem;
-    letter-spacing: 2px;
-    font-weight: 500;
-}
-
-
-
 /* modal */
 .modal .tags {
     position: fixed;
@@ -637,6 +259,15 @@
     height: 102px;
     object-fit:cover;
     border: 1px solid #333;
+}
+
+.indexItem .worksBlock a {
+    background: transparent;
+    transition: .5s;
+}
+
+.indexItem .worksBlock a:hover {
+    background: #333;
 }
 
 @media (max-width: 992px) {
