--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
     /* border: 1px solid #000; */
     background-color: transparent;
     /* background: #000; */
-    background-image: url(images/clickme.svg);
+    background-image: url(../images/clickme.svg);
     animation: spin 10s infinite linear;
 }
 
